--- a/base/src/main/res/values/strings.xml
+++ b/base/src/main/res/values/strings.xml
@@ -113,4 +113,7 @@
     <string name="trendingproducts">Trending Products</string>
     <string name="ymal">You may also like</string>
     <string name="topselling">Top Selling Products</string>
+    <string name="continue_shopping">Continue Shopping</string>
+    <string name="thank_you_order_has_been_placed_successfully">Thank you order has been placed successfully.</string>
+    <string name="thank_you">Thank You</string>
 </resources>
