--- a/base/src/main/res/values/strings.xml
+++ b/base/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="copy"><![CDATA[CopyRight \u00a9]]></string>
     <string name="apikey">e121ff541d39b93f45cd37d18e7e5b0f</string>
     <string name="shopdomain">magenative.myshopify.com</string>
-    <string name="currency">Currency Switcher</string>
+    <string name="currency">Choose Currency</string>
     <string name="noproducts">No More Products Found in Collections!</string>
     <string name="atoz">A To Z</string>
     <string name="ztoa">Z  To A</string>
