--- a/base/src/main/res/values-ar/strings.xml
+++ b/base/src/main/res/values-ar/strings.xml
@@ -116,4 +116,5 @@
     <string name="gift_success">Gift card applied successfully</string>
     <string name="gift_remove">Gift card removed successfully</string>
     <string name="discount_validation">Please enter discount code</string>
+    <string name="loading">Loading...</string>
 </resources>
