--- a/base/src/main/res/values-ar/strings.xml
+++ b/base/src/main/res/values-ar/strings.xml
@@ -118,4 +118,6 @@
     <string name="discount_validation">Please enter discount code</string>
     <string name="loading">Loading...</string>
     <string name="outofstock_warning">Product is out of stock</string>
+    <string name="sign_first">Sign</string>
+    <string name="in_last">In</string>
 </resources>
