--- a/base/src/main/res/values/strings.xml
+++ b/base/src/main/res/values/strings.xml
@@ -152,4 +152,5 @@
     <string name="out_of_stock">Out Of Stock</string>
     <string name="view_all">View All</string>
     <string name="size_chart">Size Chart</string>
+    <string name="ar_error_text">Sorry this device does not support AR feature</string>
 </resources>
