--- a/base/src/main/res/values/strings.xml
+++ b/base/src/main/res/values/strings.xml
@@ -153,4 +153,5 @@
     <string name="view_all">View All</string>
     <string name="size_chart">Size Chart</string>
     <string name="ar_error_text">Sorry this device does not support AR feature</string>
+    <string name="you_may_also_like">You May Also Like</string>
 </resources>
