Changed product listing design and also solved seach page cursor issue

--- a/base/src/main/res/values-ar/strings.xml
+++ b/base/src/main/res/values-ar/strings.xml
@@ -143,4 +143,5 @@
     <string name="size_chart">Size Chart</string>
     <string name="ar_error_text">Sorry this device does not support AR feature</string>
     <string name="you_may_also_like">You May Also Like</string>
+    <string name="sort">Sort</string>
 </resources>
