--- a/base/src/main/res/values-ar/strings.xml
+++ b/base/src/main/res/values-ar/strings.xml
@@ -157,4 +157,23 @@
     <string name="share_this">Share This</string>
     <string name="my_favorite">My Favorite</string>
     <string name="not_intrested_in">Not Intrested In</string>
+    <string name="delete_single_cart_warning">Do you want to remove this item from cart ?</string>
+    <string name="cart_single_delete_message">Item has been removed successfully</string>
+    <string name="facebook_app_id">291674992513961</string>
+    <string name="fb_login_protocol_scheme">fb291674992513961</string>
+    <string name="reorder_confirmation">Do you want to reorder this iteam ?</string>
+    <string name="confirmation">Confirmation</string>
+    <string name="yes">Yes</string>
+    <string name="reorder_success_msg">Thanks your items has been added in cart.</string>
+    <string name="reorder">Reorder</string>
+    <string name="order_date">Order date</string>
+    <string name="shipping_address">Shipping Address</string>
+    <string name="item_details">Item Details</string>
+    <string name="total_amount">Total Amount</string>
+    <string name="shiping_charges">Shiping Charges</string>
+    <string name="net_amount">Net Amount</string>
+    <string name="quantity">Quantity :</string>
+    <string name="price">Price :</string>
+    <string name="order_id">Order #</string>
+    <string name="order_delivery_location">Order will be deliver here</string>
 </resources>
