Order View New Design done and solved wishlist issue on product listing dialog

--- a/base/src/main/res/values-ar/strings.xml
+++ b/base/src/main/res/values-ar/strings.xml
@@ -176,4 +176,14 @@
     <string name="price">Price :</string>
     <string name="order_id">Order #</string>
     <string name="order_delivery_location">Order will be deliver here</string>
+    <string name="subtotal_amt">Subtotal :</string>
+    <string name="shipping_amt">Shipping (Standard Shipping) :</string>
+    <string name="tax_amt">Tax :</string>
+    <string name="payment_status">Payment Status :</string>
+    <string name="cancelled_at">Cancelled At</string>
+    <string name="cancelled_reason">Cancelled Reason</string>
+    <string name="delivery_address">Delivery Address</string>
+    <string name="total_order_price">Total Order Price</string>
+    <string name="updates_sent_to">Updates Sent To</string>
+    <string name="you_ll_want_these_too">You Will Want These Too!</string>
 </resources>
