--- a/base/src/main/res/values/strings.xml
+++ b/base/src/main/res/values/strings.xml
@@ -202,4 +202,5 @@
     <string name="please_select_the_ar_model">Please select the AR Model</string>
     <string name="the_product_is_currently_not_in_stock">The product is currently not in stock</string>
     <string name="cart_warning">Some of the products in your cart are either Out of Stock or not available in the requested quantity. Please Update your cart in order to Proceed to Checkout.</string>
+    <string name="close">Close</string>
 </resources>
