--- a/base/src/main/res/values/strings.xml
+++ b/base/src/main/res/values/strings.xml
@@ -205,4 +205,5 @@
     <string name="close">Close</string>
     <string name="choose_language">Choose Language</string>
     <string name="select_language">Select Language</string>
+    <string name="OrderDetails">Order Details</string>
 </resources>
