--- a/base/src/main/res/values-ar/strings.xml
+++ b/base/src/main/res/values-ar/strings.xml
@@ -192,4 +192,6 @@
     <string name="close">Close</string>
     <string name="choose_language">Choose Language</string>
     <string name="select_language">Select Language</string>
+    <string name="chat">Chat With Us</string>
+    <string name="smilereward">My Rewards</string>
 </resources>
