--- a/base/src/main/res/values-ar/strings.xml
+++ b/base/src/main/res/values-ar/strings.xml
@@ -194,4 +194,6 @@
     <string name="select_language">Select Language</string>
     <string name="chat">Chat With Us</string>
     <string name="smilereward">My Rewards</string>
+    <string name="yotpo_rate_product">+Write Yotpo Review</string>
+    <string name="reviewpost">Your review has been successfully submitted.</string>
 </resources>
