connected new features with features model

--- a/base/src/main/res/values-ar/strings.xml
+++ b/base/src/main/res/values-ar/strings.xml
@@ -196,4 +196,5 @@
     <string name="smilereward">My Rewards</string>
     <string name="yotpo_rate_product">+Write Yotpo Review</string>
     <string name="reviewpost">Your review has been successfully submitted.</string>
+    <string name="help">Help</string>
 </resources>
