--- a/base/src/main/res/values-ar/strings.xml
+++ b/base/src/main/res/values-ar/strings.xml
@@ -204,4 +204,7 @@
     <string name="yotpo_rate_product">+Write Yotpo Review</string>
     <string name="reviewpost">Your review has been successfully submitted.</string>
     <string name="help">Help</string>
+    <string name="filter">Filter</string>
+    <string name="apply_filter">Apply Filter</string>
+    <string name="clear_filter">Clear Filter</string>
 </resources>
