local delivery and pickup integration finalised

--- a/base/src/main/res/values/strings.xml
+++ b/base/src/main/res/values/strings.xml
@@ -249,4 +249,5 @@
     <string name="checkstores">
         <u>Check availability at other stores.</u>.
     </string>
+    <string name="pickupavailablenot">Not available for pickup at..</string>
 </resources>
