--- a/base/src/main/res/values-ar/strings.xml
+++ b/base/src/main/res/values-ar/strings.xml
@@ -211,4 +211,5 @@
     <string name="checkstores">
         <u>Check availability at other stores.</u>.
     </string>
+    <string name="pickupavailablenot">Not available for pickup at..</string>
 </resources>
