--- a/base/src/main/res/values-ar/strings.xml
+++ b/base/src/main/res/values-ar/strings.xml
@@ -193,6 +193,7 @@
     <string name="choose_language">Choose Language</string>
     <string name="select_language">Select Language</string>
     <string name="pick_up_in_store">Pick up in store</string>
+    <string name="ship">Shipping</string>
     <string name="please_enter_your_postal_code_to_find_out_if_we_deliver_to_this_area">Please enter your postal code to find out if we deliver to this area</string>
     <string name="click_here_to_select_delivery_date">Click here to select delivery date</string>
     <string name="order_note_hint">Please enter order note</string>
