--- a/base/src/main/res/values-ar/strings.xml
+++ b/base/src/main/res/values-ar/strings.xml
@@ -193,7 +193,7 @@
     <string name="choose_language">Choose Language</string>
     <string name="select_language">Select Language</string>
     <string name="pick_up_in_store">Pick up in store</string>
-    <string name="ship">Shipping</string>
+
     <string name="please_enter_your_postal_code_to_find_out_if_we_deliver_to_this_area">Please enter your postal code to find out if we deliver to this area</string>
     <string name="click_here_to_select_delivery_date">Click here to select delivery date</string>
     <string name="order_note_hint">Please enter order note</string>
@@ -207,4 +207,9 @@
     <string name="help">Help</string>
     <string name="loadings">Loading...Please Wait.</string>
     <string name="delivery_true">Good news! We can deliver to you..</string>
+    <string name="ship">Shipping</string>
+    <string name="noshipping">Shipping not available</string>
+    <string name="noeligibility">This product is not eligible for delivery</string>
+    <string name="nodelivery">Sorry, delivery is not available in your area at the moment.</string>
+    <string name="delivery">Good news! We can deliver to you..</string>
 </resources>
